# extractx

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEX.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: architecture.md  thread-orchestration.md
docs/adr/: 0000-template.md  0001-pass-through-operational-metadata.md  0002-pydantic-ai-default-selector-and-interview.md  0003-single-canonical-layer3-no-resolver-validators.md  0004-narrow-interview-scope-to-field-seams.md  0005-candidate-overflow-policy.md  0006-sourcespan-textual-anchor-space-and-visual-provenance.md  0007-storage-shape-authority-and-minimum-skeleton.md  0008-observation-shaped-llm-extraction.md  0009-llm-instance-proposer-for-many-cardinality.md  0010-instance-candidate-strategy-seam.md  0011-inspectable-extraction-plan-and-dry-run.md  0012-provenance-grouping-and-replay-ref-contracts.md  0013-pydantic-structured-candidate-contracts.md  0014-document-level-literal-classification.md  0015-minimal-soft-compute-usage-events.md  0016-observability-boundaries.md  0017-spacy-ner-candidate-strategy.md  0018-candidate-filter-seam.md  0019-rule-surfaces-and-repair-ownership.md  0020-benchmark-primitives-over-benchmark-product.md  0021-plural-candidate-strategy-bindings.md  0022-benchmark-miss-attribution.md  0023-batch-selector-observations.md  0024-readable-bounded-id-selector-prompts.md  0025-budgeted-selector-task-planning.md  0026-spacy-span-candidate-strategy.md  0027-provider-structured-output-modes.md  0028-deferred-soft-call-execution.md  0029-aggregate-deferred-submissions.md  0030-selector-example-fixtures.md  0031-selector-call-diagnostics-in-replay.md  0032-ner-long-document-chunking.md  0033-deferred-soft-call-parity.md  0034-budgeted-document-classification.md  README.md  (+2 more)
docs/tasks/: README.md  (+32 more)
(+228 files in other folders)
