[project]
name = "extractx"
version = "0.1.0"
description = "a schema-first grounded proposal engine"
readme = "README.md"
authors = [{ name = "Vahid Eyorokon", email = "veyorokon@gmail.com" }]
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0,<3",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "msgspec>=0.18",
]

[project.optional-dependencies]
pydantic_ai = ["pydantic-ai>=1.99.0"]
spacy = ["spacy>=3.7,<4"]
unstructured = ["unstructured>=0.12"]
modal = ["modal>=0.60"]
ray = ["ray>=2.9"]
all = ["extractx[pydantic_ai,spacy,unstructured]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.5",
]

[project.scripts]
extractx = "extractx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/extractx"]

# PEP-735 dependency group. mirrored from
# [project.optional-dependencies].dev so that a bare `uv sync` (area 6
# step 1 of the bootstrap brief) installs the tools needed by the
# subsequent verification steps. the optional-dependencies entry is
# retained so `pip install extractx[dev]` still works.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pre-commit>=3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
